# pmkit

./: .gitignore  CLAUDE.md  README.md  __init__.py  plan.md  pyproject.toml  requirements.txt  version.py
.claude/rules/: coding-patterns.md  file-organization.md  pmkit-boundaries.md  pmkit-editing.md
bot/: __init__.py  base.py
config/: __init__.py  env.py
data/: __init__.py  storage.py
data/binance/: __init__.py  feed.py  fetcher.py  types.py
exchanges/: __init__.py  base.py
exchanges/kalshi/: __init__.py  auth.py  client.py  market_finder.py  orderbook_ws.py  types.py
exchanges/polymarket/: __init__.py  client.py  market_finder.py  orderbook_ws.py  types.py  user_ws.py
exchanges/predictfun/: __init__.py  auth.py  client.py  market_finder.py  orderbook_ws.py  types.py
log/: __init__.py  csv_logger.py  logger.py  paths.py
prompts/: __init__.py  inquirer.py
websocket/: __init__.py  base.py
